--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -173,10 +173,19 @@ nav ul {
 nav li {
   padding: 0 10px;
   font-size: 1.2em;
+  cursor: pointer;
+  font-weight: 400;
 }
 
 li:hover {
-  color: #b1663c;
+  font-weight: 600;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+.bold {
+  font-weight: 600;
 }
 #introduction {
   display: flex;
