--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -260,11 +260,12 @@ input[type="submit"] {
   font-family: "Syne";
   font-weight: 700;
   color: white;
+  width: 179px;
   background-color: #1d6154;
   margin: 2em auto;
-  width: 180px;
   text-align: center;
   border-radius: 60px;
+  cursor: pointer;
 }
 input[type="submit"]:hover {
   background-color: #0e2f28;
@@ -292,7 +293,6 @@ footer nav ul {
   margin-right: 10px;
   padding-left: 15px;
   padding-right: 15px;
-  border-radius: 60px;
   border: 1px solid #1d6154;
 }
 
@@ -303,4 +303,109 @@ footer nav ul {
 
 #filtersContainer {
   text-align: center;
+}
+
+/***** CSS de la fenêtre modale *****/
+
+.flex {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
+
+.position {
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.right {
+  padding-right: 10px;
+}
+
+#modal {
+  width: 630px;
+  height: 688px;
+  border-radius: 10px;
+  background: #fff;
+  border: #fff;
+  box-sizing: border-box;
+}
+
+.x-position {
+  position: absolute;
+  right: 15px;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+dialog h3 {
+  text-align: center;
+  font-size: 26px;
+  line-height: normal;
+  margin-top: 60px;
+}
+
+.modalContent {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  margin: 30px 50px 50px 50px;
+}
+
+.modalContent img {
+  width: 100%;
+}
+
+.imageContainer {
+  position: relative;
+  display: inline-block;
+}
+
+.trash {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  color: white;
+  background-color: #000;
+  border: 1px solid #000;
+  border-radius: 4px;
+  cursor: pointer;
+  right: 5px;
+  top: 5px;
+  padding: 3px 4px 3px 4px;
+  font-size: 15px;
+}
+
+.line {
+  border-bottom: 1px solid #b3b3b3;
+  width: 420px;
+  margin: 0 auto;
+}
+
+.modalBtn {
+  display: flex;
+  justify-content: center;
+  height: 36px;
+  width: 237px;
+  border: 1px solid #1d6154;
+}
+
+/****** CSS du mode edition ******/
+
+.modeEdition {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: black;
+  height: 59px;
+  width: 100%;
+  margin: 0;
 }
